--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -646,7 +646,7 @@ body {
   }
 
   .hero-name span {
-    animation: none;
+    /* animation: none; */
   }
 
   .opa {
@@ -903,7 +903,7 @@ body {
   }
 
   .hero-name span {
-    animation: none;
+    /* animation: none; */
   }
 
   .opa {
